<resources>
    <string name="app_name">BookNotes</string>
    <string name="search">Search</string>
    <string name="edit">편집</string>
    <string name="add">추가</string>
    <string name="delete">삭제</string>
    <string name="save">저장</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="prev">이전</string>
    <string name="search_result">검색 결과</string>
    <string name="edit_done">완료</string>
    <string name="basic_book_case">기본 책장</string>
    <string name="bookcase_list">책장</string>
    <string name="book_list_align">정렬</string>
    <string name="book_list_view_style">보기</string>
    <string name="book_by_internet_search">책 검색</string>
    <string name="barcode_scan">바코드 스캔</string>
    <string name="direct_input">직접 입력</string>
    <string name="ok">OK</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="no_search_result">검색 결과가 없습니다</string>
    <string name="title">제목</string>
    <!-- <string name="subtitle">부제</string>-->
    <string name="author">저자(필수)</string>
    <string name="translator">옮긴이</string>
    <string name="publisher">출판사</string>
    <string name="datetime">출간일</string>
    <string name="price">가격</string>
    <string name="won">원</string>
    <!-- <string name="price">페이지 수</string> -->
    <string name="purchase">구매처</string>
    <string name="readingInfo">독서 정보</string>
    <string name="readStartDate">독서 시작일</string>
    <string name="readEndDate">독서 종료일</string>
    <string name="paperBook">종이책</string>
    <string name="eBook">전자책</string>
    <string name="etc">기타</string>
    <string name="isPpossess">소장 여부</string>
    <string name="review">서평</string>
    <string name="writeReview">서평 달기</string>
    <string name="memo">메모</string>
    <string name="tag">태그</string>
    <string name="save_msg">저장하시겠습니까?</string>
    <string name="delete_msg">삭제하시겠습니까?</string>
    <string name="add_msg">"'" %1$s "'" 을(를) 목록에 추가하시겠습니까?</string>
    <string name="add_book">바코드를 스캔해서 책을 추가해 보세요</string>
</resources>
