<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group_menu_book_case">
        <item
            android:id="@+id/menu_activity_bookcase_add"
            android:title="@string/add"
            android:icon="@drawable/ic_add_black_24dp"
            app:actionLayout="@layout/item_menu_add_layout"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu_activity_bookcase_edit"
            android:title="@string/edit"
            android:icon="@drawable/ic_mode_edit_black_24dp"
            app:showAsAction="always"/>
    </group>
    <group
        android:id="@+id/group_menu_search_result"
        android:visible="false">
        <item
            android:id="@+id/menu_activity_bookcase_search_cancel"
            android:title="@string/prev"
            android:icon="@drawable/ic_cancel_white_24dp"
            app:showAsAction="always"/>
    </group>

    <group
        android:id="@+id/group_menu_edit"
        android:visible="false">
        <item
            android:id="@+id/menu_activity_bookcase_delete"
            android:title="@string/delete"
            android:icon="@drawable/ic_delete_black_24dp"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu_activity_bookcase_edit_done"
            android:title="@string/edit_done"
            android:icon="@drawable/ic_done_white_24dp"
            app:showAsAction="always"/>
    </group>
</menu>