<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
        android:id="@+id/tbDetailPage"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ToolbarTheme"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/tbDetailPage">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivDetailBookThumb"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitCenter"
                android:background="@drawable/ic_book_black_24dp"/>
            <!-- 책 정보 start -->
            <LinearLayout
                android:id="@+id/llDetailBookInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/ivDetailBookThumb">
                <TextView
                    android:id="@+id/tvDetailBookTitle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_text_view_height"
                    android:hint="@string/title"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/detail_list_text_view_padding_start"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:background="@drawable/detail_text_view_bg"/>
                <TextView
                    android:id="@+id/tvDetailBookAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_text_view_height"
                    android:paddingStart="@dimen/detail_list_text_view_padding_start"
                    android:gravity="center_vertical"
                    android:hint="@string/author"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:background="@drawable/detail_text_view_bg"/>
                <TextView
                    android:id="@+id/tvDetailBookTranslator"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_text_view_height"
                    android:paddingStart="@dimen/detail_list_text_view_padding_start"
                    android:gravity="center_vertical"
                    android:hint="@string/translator"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:background="@drawable/detail_text_view_bg"/>
                <TextView
                    android:id="@+id/tvDetailBookPublisher"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_text_view_height"
                    android:paddingStart="@dimen/detail_list_text_view_padding_start"
                    android:gravity="center_vertical"
                    android:hint="@string/publisher"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:background="@drawable/detail_text_view_bg"/>
                <TextView
                    android:id="@+id/tvDetailBookDatetime"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_text_view_height"
                    android:paddingStart="@dimen/detail_list_text_view_padding_start"
                    android:gravity="center_vertical"
                    android:hint="@string/datetime"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:background="@drawable/detail_text_view_bg"/>
                <TextView
                    android:id="@+id/tvDetailBookPrice"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_text_view_height"
                    android:paddingStart="@dimen/detail_list_text_view_padding_start"
                    android:gravity="center_vertical"
                    android:hint="@string/price"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:background="@drawable/detail_text_view_bg"/>
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/tvDetailBookPurchase"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_text_view_height"
                    android:paddingStart="@dimen/detail_list_text_view_padding_start"
                    android:gravity="center_vertical"
                    android:hint="@string/purchase"
                    android:cursorVisible="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:background="@drawable/detail_text_view_bg"/>
            </LinearLayout>
            <!-- 책 정보 end -->
            <!-- 독서 정보 start -->
            <LinearLayout
                android:id="@+id/llReadingInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/llDetailBookInfo">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_text_view_height"
                    android:paddingStart="@dimen/detail_list_text_view_padding_start"
                    android:text="@string/readingInfo"
                    android:gravity="center_vertical"
                    android:background="@color/common_google_signin_btn_text_dark_disabled"/>
                <TextView
                    android:id="@+id/tvDetailBookReadStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_text_view_height"
                    android:paddingStart="@dimen/detail_list_text_view_padding_start"
                    android:gravity="center_vertical"
                    android:hint="@string/readStartDate"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:background="@drawable/detail_text_view_bg"/>
                <TextView
                    android:id="@+id/tvDetailBookReadEndDate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_text_view_height"
                    android:paddingStart="@dimen/detail_list_text_view_padding_start"
                    android:gravity="center_vertical"
                    android:hint="@string/readEndDate"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:background="@drawable/detail_text_view_bg"/>
                <RadioGroup
                    android:id="@+id/rgBookType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="@dimen/detail_list_text_view_padding_start"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rbPaperBook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/paperBook"/>
                    <RadioButton
                        android:id="@+id/rbEBook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eBook"/>
                    <RadioButton
                        android:id="@+id/rbEtcBook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/etc"/>
                </RadioGroup>
                <RatingBar
                    android:id="@+id/ratingBookGrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@android:style/Widget.Material.Light.RatingBar"
                    android:layout_marginTop="@dimen/detail_list_text_view_padding_start"
                    android:layout_marginBottom="@dimen/detail_list_text_view_padding_start"
                    android:layout_marginStart="@dimen/detail_list_text_view_padding_start"
                    android:numStars="5"
                    android:stepSize="1"/>
            </LinearLayout>
            <!-- 독서 정보 end -->
            <!-- 서평 start -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_text_view_height"
                    android:paddingStart="@dimen/detail_list_text_view_padding_start"
                    android:text="@string/review"
                    android:gravity="center_vertical"
                    android:background="@color/common_google_signin_btn_text_dark_disabled"/>
                <TextView
                    android:id="@+id/tvWriteReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/detail_list_text_view_height"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:hint="@string/writeReview"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/detail_list_text_view_padding_start"
                    android:inputType="textMultiLine"
                    android:background="@drawable/detail_text_view_bg"/>
            </LinearLayout>
            <!-- 서평 end  -->
        </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:id="@+id/flContents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        />
</android.support.constraint.ConstraintLayout>